# differential

./: .hgignore  .travis.yml  README.md  differential.cabal  stack.yaml
.circleci/: config.yml
src/: Main.hs
src-main/: Main.hs
src-main/Differential/: Ui.hs
src/Differential/: Diff.hs  Parser.hs  Ui.hs
