name:                differential
version:             0.1.0
synopsis:            A command line viewer for unified diffs
category:            Development

author:              Enno Cramer
maintainer:          ecramer@memfrob.de
license:             GPL-3
license-file:        LICENSE
homepage:            https://memfrob.de/

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Differential.Diff
                     , Differential.Parser
  build-depends:       base >=4.7 && <4.8
                     , mtl >=2.1.3 && <2.1.4
                     , text >=1.2.0 && <1.2.1
                     , parsec >=3.1 && <3.2
  default-language:    Haskell98
  ghc-options:         -Wall


executable differential
  hs-source-dirs:      src-main
  main-is:             Main.hs
  other-modules:       Differential.Ui
  build-depends:       base >=4.7 && <4.8
                     , text >=1.2.0 && <1.2.1
                     , vty >=5.2.9 && <5.3
                     , vty-ui ==1.8
                     , differential
  default-language:    Haskell98
  ghc-options:         -Wall -threaded -with-rtsopts=-N
