name:                differential
version:             0.1.0
synopsis:            A command line viewer for unified diffs
category:            Development

author:              Enno Cramer
maintainer:          ecramer@memfrob.de
license:             GPL-3
license-file:        LICENSE
homepage:            https://memfrob.de/

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Differential.Diff
                     , Differential.Parser
  build-depends:       base >=4.7 && <4.13
                     , text >=1.2.0 && <1.3
                     , parsec >=3.1 && <3.2
  default-language:    Haskell98
  ghc-options:         -Wall


executable differential
  hs-source-dirs:      src-main
  main-is:             Main.hs
  other-modules:       Differential.Ui
  build-depends:       base >=4.7 && <4.13
                     , vector >=0.11.0.0 && <0.13
                     , text >=1.2.0 && <1.3
                     , vty >=5.4.0 && <5.26
                     , brick >=0.17 && <0.47
                     , differential
  default-language:    Haskell98
  ghc-options:         -Wall -threaded -with-rtsopts=-N
